syntax = "proto3";

option java_multiple_files = true;

package fr.stonehaven.server;

enum ServerStatus {
  STARTING = 0;
  ONLINE = 1;
  SHUTTING_DOWN = 2;
}